<resources>
    <string name="server_client_id">274163240030-vmu28kdb7kb9lih9qhtsvlh098lj3nsh.apps.googleusercontent.com</string>
    <string name="app_name">AddOn Systems</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="enquiry">ENQUIRY</string>
    <string name="forgot_password">Forget Password ?</string>
    <string name="required">Required</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have account yet ?</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="already_member">Already a member ?</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="item_width">Item Width</string>
    <string name="screen_resolution">Screen Resolution</string>
    <string name="hard_drive">Hard Drive</string>
    <string name="connectivity">Connectivity</string>
    <string name="battery_life">Battery Life</string>
    <string name="description">Description</string>
    <string name="enq_description">Description</string>
    <string name="address">Address</string>
    <string name="company_name">Company Name</string>
    <string name="optional">Optional</string>
    <string name="category">ADDON SYSTEM</string>
    <string name="product">Products</string>
    <string name="item_detail">Item Detail</string>
    <string name="msg_please_wait">Please wait...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="network_error_msg">Please check your internet connection</string>
    <string name="app_id">1277725045606163</string>
    <string name="server_error">Server not responding. Please try again later</string>
    <string name="msg_email_error">Please enter valid Email Id</string>
    <string name="msg_empty_password">Please enter password</string>
    <string name="msg_empty_email">Please enter Email Id</string>
    <string name="msg_empty_phone_no">Please enter mobile number</string>
    <string name="msg_empty_address">Please enter address</string>
    <string name="msg_empty_firstname">Please enter Name</string>
    <string name="login_success">Login successful</string>
    <string name="registration_success">Registration successful</string>
    <string name="msg_empty_confirm_password">Please confirm Password</string>
    <string name="msg_password_mistmach_error">Password entered does not match</string>
    <string name="change_pwd_success">Password reset successful. Please check mail</string>
    <string name="msg_exit_app">Please click BACK again to exit</string>
    <string name="msg_confirm_logout">Do you want to Logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="email_id">Email Address</string>
    <string name="or">OR</string>
    <string name="msg_already_register">User is already register. Please Sign In with different credentials.</string>
    <string name="login_fail">Invalid credentials</string>
    <string name="enquiry_sent">Enquiry sent successfully</string>
    <string name="enquiry_failed">Failed to send enquiry</string>
    <string name="signup_now">Sign up now</string>
    <string name="submit">SUBMIT</string>
    <string name="create_account">CREATE ACCOUNT</string>
</resources>
