<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:gravity="top|center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_email"
        style="@style/tv_faint_black_sub_title"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:maxLength="50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/tv_bg_blue_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/tv_ok"
            style="@style/tv_bg_blue_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>