<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        style="@style/tv_toolbar_heading"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/signup" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/faint_white"
            card_view:cardCornerRadius="1dp"
            card_view:contentPadding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    style="@style/tv_black_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/full_name" />

                <EditText
                    android:id="@+id/et_full_name"
                    style="@style/tv_faint_black_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required"
                    android:maxLength="50"
                    android:maxLines="1" />

                <TextView
                    style="@style/tv_black_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/email_id" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/tv_faint_black_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1" />

                <TextView
                    style="@style/tv_black_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/mobile_no" />

                <EditText
                    android:id="@+id/et_mobile_no"
                    style="@style/tv_faint_black_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/required"
                    android:inputType="number"
                    android:maxLength="20"
                    android:maxLines="1" />

                <TextView
                    style="@style/tv_black_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/tv_faint_black_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:maxLines="1" />

                <TextView
                    style="@style/tv_black_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/confirm_pwd" />

                <EditText
                    android:id="@+id/et_confirm_password"
                    style="@style/tv_faint_black_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/tv_signup"
                    style="@style/tv_bg_blue_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="28dp"
                    android:paddingRight="28dp"
                    android:text="@string/signup" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        style="@style/tv_black_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:gravity="left"
                        android:text="@string/already_member" />

                    <TextView
                        android:id="@+id/tv_login"
                        style="@style/tv_blue_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:gravity="left"
                        android:text="@string/login" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>