<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        style="@style/tv_toolbar_heading"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/ic_launcher" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="@color/faint_white"
                card_view:cardCornerRadius="1dp"
                card_view:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tv_black_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/email_id" />

                    <EditText
                        android:id="@+id/et_email"
                        style="@style/tv_faint_black_sub_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/required"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1" />

                    <TextView
                        style="@style/tv_black_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/et_password"
                        style="@style/tv_faint_black_sub_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/required"
                        android:inputType="textPassword"
                        android:maxLength="40"
                        android:maxLines="1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/tv_login"
                            style="@style/tv_bg_blue_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/login" />

                        <TextView
                            android:id="@+id/tv_forget_pwd"
                            style="@style/tv_blue_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="@string/forgot_password" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            style="@style/tv_black_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:gravity="left"
                            android:text="@string/dont_have_account" />

                        <TextView
                            android:id="@+id/tv_signup"
                            style="@style/tv_blue_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:gravity="left"
                            android:text="@string/signup" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_fb_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_item_blue_fb_rectangle"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="1">

                <TextView
                    style="@style/tv_social_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.8"
                    android:gravity="right"
                    android:text="f"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    style="@style/tv_social_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="0.2"
                    android:gravity="left|center_horizontal"
                    android:text="@string/login_with_fb" />
            </LinearLayout>

            <TextView
                style="@style/tv_black_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/or" />

            <LinearLayout
                android:id="@+id/ll_google_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_item_red_google_rectangle"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="1">

                <TextView
                    style="@style/tv_social_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.75"
                    android:gravity="right"
                    android:text="g+"
                    android:textAppearance="?android:textAppearanceLarge" />

                <TextView
                    style="@style/tv_social_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="left"
                    android:text="@string/login_with_google" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>