<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_full_name"
                style="@style/tv_faint_black_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingTop="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_full_name"
                android:layout_alignLeft="@+id/et_full_name"
                android:layout_alignTop="@+id/et_full_name"
                android:layout_margin="5dp"
                android:src="@drawable/ic_mail" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_email"
                style="@style/tv_faint_black_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingTop="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_email"
                android:layout_alignLeft="@+id/et_email"
                android:layout_alignTop="@+id/et_email"
                android:layout_margin="5dp"
                android:src="@drawable/ic_mail" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_mobile_no"
                style="@style/tv_faint_black_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/mobile_no"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingTop="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_mobile_no"
                android:layout_alignLeft="@+id/et_mobile_no"
                android:layout_alignTop="@+id/et_mobile_no"
                android:layout_margin="5dp"
                android:src="@drawable/ic_phone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_address"
                style="@style/tv_faint_black_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingTop="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_address"
                android:layout_alignLeft="@+id/et_address"
                android:layout_alignTop="@+id/et_address"
                android:layout_margin="5dp"
                android:src="@drawable/ic_address" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_company_name"
                style="@style/tv_faint_black_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_name"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingTop="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_company_name"
                android:layout_alignLeft="@+id/et_company_name"
                android:layout_alignTop="@+id/et_company_name"
                android:layout_margin="5dp"
                android:src="@drawable/ic_company" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_description"
                style="@style/tv_faint_black_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enq_description"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingTop="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_description"
                android:layout_alignLeft="@+id/et_description"
                android:layout_alignTop="@+id/et_description"
                android:layout_margin="5dp"
                android:src="@drawable/ic_company" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_btn_submit" />

    </LinearLayout>
</ScrollView>